--- a/targeting/src/app/matriz/matriz.component.html
+++ b/targeting/src/app/matriz/matriz.component.html
@@ -138,3 +138,11 @@
   </mat-button-toggle>
 </mat-button-toggle-group>
 <span class="center">Prioridad: {{group.value}}</span>
+
+<br>
+<br>
+<ul>
+  <li *ngFor="let item of lista">
+      {{item.prioridad}}
+  </li>
+</ul>
