Cambio de modelo y tableros

--- a/targeting/src/app/home/home.component.html
+++ b/targeting/src/app/home/home.component.html
@@ -20,6 +20,8 @@
       <button>Tema</button>
     </div>
     <div class="col">
+      <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matriz</button>
+      <!--
       <button type="button" pButton label="Matriz" (click)="crearMatriz($event);"></button>
       <p-confirmDialog  key="Crear Matriz" header="Crear Matriz" icon="fa fa-question-circle" [(visible)]="confirmDropDatabaseDialogVisible" #cd>
         <p-footer id="footer">
@@ -30,7 +32,7 @@
               Actual
             </button>
         </p-footer>
-    </p-confirmDialog>
+    </p-confirmDialog>-->
     </div>
   </div>
 </body>
