--- a/targeting/src/app/home/home.component.html
+++ b/targeting/src/app/home/home.component.html
@@ -6,34 +6,17 @@
   <title>Incio</title>
 </head>
 <body>
-  <div class="container color-dark">
-    <div class="col">
-      <p>INGRESO DE DATOS</p>
-    </div>
-    <div class="col">
-      <p>COLABORATIVO</p>
-    </div>
+  <br>
+  <div style="text-align: center;">
+    <h1>Menu Principal</h1>
   </div>
-  <div class="container color-light">
-    <div class="col">
-      <button mdbBtn type="button" color="elegant" mdbWavesEffect>Actor</button>
-      <button>Tema</button>
-    </div>
-    <div class="col">
-      <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matriz</button>
-      <!--
-      <button type="button" pButton label="Matriz" (click)="crearMatriz($event);"></button>
-      <p-confirmDialog  key="Crear Matriz" header="Crear Matriz" icon="fa fa-question-circle" [(visible)]="confirmDropDatabaseDialogVisible" #cd>
-        <p-footer id="footer">
-            <button mat-button color="success" (click)="cd.accept()">
-              Nuevo
-            </button>
-            <button mat-button color="success" (click)="old()">
-              Actual
-            </button>
-        </p-footer>
-    </p-confirmDialog>-->
-    </div>
+  
+  <div style="display: flex;
+  justify-content: space-around; align-items: center;">
+
+      <button mdbBtn type="button" color="elegant" mdbWavesEffect>Actores</button>
+      <button>Temas</button>
+      <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matrices</button>
   </div>
 </body>
 </html>
