arreglar tiempo real

--- a/targeting/src/app/actores/actores.component.html
+++ b/targeting/src/app/actores/actores.component.html
@@ -21,7 +21,7 @@ idMapping ="id"  childMapping= "hijos"
     <e-columns>
         <e-column
         field="name"
-        headerText="Actor Name"
+        headerText="Actor"
         textAlign="Left"
         width= "160"
         >
