--- a/targeting/src/app/theme/theme.component.html
+++ b/targeting/src/app/theme/theme.component.html
@@ -30,7 +30,7 @@ idMapping ="id" childMapping= "hijos"
       ></e-column>-->
       <e-column
       field="name"
-      headerText="Tema Name"
+      headerText="Tema"
       textAlign="Left"
       width= "160"
       >
